[gd_scene load_steps=13 format=3 uid="uid://dh6b4o5wvviu0"]

[ext_resource type="Script" uid="uid://bs0o7nivlx6bc" path="res://addons/plugin_devtools/src/tools_dock/property_info/PropertyListTree.gd" id="1_k7j3a"]
[ext_resource type="Script" uid="uid://biow85b306t1r" path="res://addons/plugin_devtools/src/tools_dock/property_info/PropertySelectorButton.gd" id="1_ssl5k"]
[ext_resource type="Script" uid="uid://83yq2e5cupld" path="res://addons/plugin_devtools/src/controls/EditorIconButton.gd" id="2_v6nks"]
[ext_resource type="Script" uid="uid://esqxcw7d4l6a" path="res://addons/plugin_devtools/src/controls/CopyNotifier.gd" id="3_afeo8"]
[ext_resource type="Script" uid="uid://bywp3i4x7sw0v" path="res://addons/plugin_devtools/src/tools_dock/property_info/NoObjectSelectedNotice.gd" id="3_ngycd"]
[ext_resource type="Script" uid="uid://cgayqbdimevbw" path="res://addons/plugin_devtools/src/tools_dock/property_info/PropertyInfoPrinter.gd" id="4_bgk1f"]

[sub_resource type="SVGTexture" id="SVGTexture_16pao"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#fff\" d=\"M8 1a7 7 0 0 0 0 14A7 7 0 0 0 8 1zM7 4h2v2H7zm0 3h2v5H7z\"/></svg>
"
base_scale = 2.0
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="SVGTexture" id="SVGTexture_ngycd"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M7 4v9h2v-3h1a3 3 0 0 0 0-6zm2 2h1a1 1 0 0 1 0 2H9zm-5 5a1 1 0 0 0 0 2 1 1 0 0 0 0-2z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_inqcu"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.09068625, 0.09068625, 0.09068625, 1)
corner_detail = 1
anti_aliasing = false

[sub_resource type="SVGTexture" id="SVGTexture_tr21w"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"12\"><path fill=\"#54ed9e\" d=\"M3 2v2a3 3 0 0 0 0 6h2V2zm3 0v2h2V2zm7 0v5a3 3 0 0 0 3 3V8a1 1 0 0 1-1-1V6h1V4h-1V2zm-2 2a3 3 0 0 0 0 6h1V8h-1a1 1 0 0 1 0-2h1V4zM8 7V6H6v4h2zM3 6v2a1 1 0 0 1 0-2z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="SVGTexture" id="SVGTexture_ygmkk"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><linearGradient id=\"a\"><stop offset=\".25\" stop-color=\"#ffe345\"/><stop offset=\".75\" stop-color=\"#919191\"/></linearGradient><path fill=\"#45d7ff\" d=\"m5.914 4-2 2H9.01V4z\"/><path fill=\"#ff4596\" d=\"M11 4v2h4V4Z\"/><path fill=\"#ff4545\" d=\"M1 8v2h3V8z\"/><path fill=\"url(#a)\" d=\"M6 8v2h7V8z\"/><path fill=\"#919191\" d=\"M1 12v2h5v-2zm7 0v2h6v-2z\"/><path fill=\"#e0e0e0\" d=\"M2 1 1 2l1.5 1.5L1 5l1 1 2.5-2.5z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="GDScriptSyntaxHighlighter" id="GDScriptSyntaxHighlighter_tjilw"]

[node name="PropertyInfo" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 1
metadata/icon = SubResource("SVGTexture_16pao")

[node name="VSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
split_offset = -200

[node name="MarginContainer" type="MarginContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VSplitContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VSplitContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_icons/icon = SubResource("SVGTexture_ngycd")
text = "Select Property"
script = ExtResource("1_ssl5k")

[node name="Tree" type="Tree" parent="VSplitContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"CodeEdit"
allow_reselect = true
hide_root = true
select_mode = 1
script = ExtResource("1_k7j3a")

[node name="PanelContainer" type="PanelContainer" parent="VSplitContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_inqcu")
script = ExtResource("3_ngycd")

[node name="CenterContainer" type="CenterContainer" parent="VSplitContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VSplitContainer/MarginContainer/PanelContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0.43529412)
layout_mode = 2
text = "No Object Selected"

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="PropertyInfoButton" type="Button" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"InspectorActionButton"
theme_override_icons/icon = SubResource("SVGTexture_tr21w")
text = "Copy Text"
script = ExtResource("2_v6nks")
icon_name = "Dictionary"
button_type = "InspectorActionButton"

[node name="PropertyEditorButton" type="Button" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"InspectorActionButton"
theme_override_icons/icon = SubResource("SVGTexture_ygmkk")
text = "Copy Editor Property Code"
script = ExtResource("2_v6nks")
icon_name = "CodeHighlighter"
button_type = "InspectorActionButton"

[node name="Copied" type="TextureRect" parent="VSplitContainer/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
stretch_mode = 5
script = ExtResource("3_afeo8")

[node name="CodeEdit" type="CodeEdit" parent="VSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "# Property Info (_validate_property, _get_property_list):
{
	&\"name\": \"icon\",
	&\"class_name\": \"Texture2D\",
	&\"type\": TYPE_OBJECT, # (24)
	&\"hint\": PROPERTY_HINT_RESOURCE_TYPE, # (17)
	&\"hint_string\": \"Texture2D\",
	&\"usage\": PROPERTY_USAGE_DEFAULT, # (6)
}

# Instantiate EditorProperty (EditorInspectorPlugin)
var property_editor := EditorInspector.instantiate_property_editor(
	get_edited_object(),
	TYPE_OBJECT,
	\"icon\",
	PROPERTY_HINT_RESOURCE_TYPE,
	\"Texture2D\",
	PROPERTY_USAGE_DEFAULT,
)
add_property_editor(\"icon\", property_editor)"
placeholder_text = "# Select an object to edit in the inspector,
# then select a property in the inspector
# or the tree to the right."
editable = false
syntax_highlighter = SubResource("GDScriptSyntaxHighlighter_tjilw")
draw_tabs = true
symbol_lookup_on_click = true
symbol_tooltip_on_hover = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
script = ExtResource("4_bgk1f")

[connection signal="property_selected" from="VSplitContainer/MarginContainer/VBoxContainer2/Button" to="VSplitContainer/MarginContainer/VBoxContainer2/Tree" method="_find_property"]
[connection signal="property_selected" from="VSplitContainer/MarginContainer/VBoxContainer2/Button" to="VSplitContainer/VBoxContainer/CodeEdit" method="_print_selected"]
[connection signal="property_selected" from="VSplitContainer/MarginContainer/VBoxContainer2/Tree" to="VSplitContainer/VBoxContainer/CodeEdit" method="_print_selected"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/HBoxContainer/PropertyInfoButton" to="VSplitContainer/VBoxContainer/HBoxContainer/Copied" method="show_and_fade"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/HBoxContainer/PropertyInfoButton" to="VSplitContainer/VBoxContainer/CodeEdit" method="_property_info_button_pressed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/HBoxContainer/PropertyEditorButton" to="VSplitContainer/VBoxContainer/HBoxContainer/Copied" method="show_and_fade"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/HBoxContainer/PropertyEditorButton" to="VSplitContainer/VBoxContainer/CodeEdit" method="_property_editor_code_button_pressed"]
